[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scenes/Minigames/Fishing3/fishing3.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/fish_minigame_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/fish_minigame_6.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/reel.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/fish_minigame_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/yankbutton1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/yankbutton2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/yankbutton3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/bg1.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Minigames/Fishing3/shatter_particle.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/bg2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/fade.png" type="Texture" id=12]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/cntdn1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/cntdn5.png" type="Texture" id=14]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/cntdn4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/starb.png" type="Texture" id=16]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/yank_alt1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/yank_alt3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/yank_alt2.png" type="Texture" id=19]
[ext_resource path="res://Sounds/Fishing/minigame_breaka.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Fishing/minigame_click.ogg" type="AudioStream" id=21]
[ext_resource path="res://Sounds/Fishing/minigame_reeling.ogg" type="AudioStream" id=22]
[ext_resource path="res://Sounds/Fishing/minigame_fail.ogg" type="AudioStream" id=23]
[ext_resource path="res://Sounds/Fishing/minigame_win.ogg" type="AudioStream" id=24]
[ext_resource path="res://Sounds/Fishing/minigame_failb.ogg" type="AudioStream" id=25]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.312236, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.797468, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0.4, -1, 0 )
spread = 82.38
gravity = Vector3( 0, 98, 0 )
initial_velocity = 209.36
initial_velocity_random = 0.55
angular_velocity = 210.67
angular_velocity_random = 0.91
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bars/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1000, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("bars/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, 0 ), Vector2( 0, 0 ) ]
}

[node name="fishing3" type="CanvasLayer"]
layer = 15
script = ExtResource( 1 )

[node name="mouse_eat" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bars" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="TextureRect" parent="bars"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1000.0
margin_right = -1000.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true

[node name="Control" type="Control" parent="bars"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="stars" type="HBoxContainer" parent="bars/Control"]
anchor_left = 0.01
anchor_top = 0.02
anchor_right = 0.227729
anchor_bottom = 0.142778
margin_right = -0.240002
margin_bottom = -0.200005
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="main"]
anchor_right = 0.5
anchor_bottom = 0.95
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="main/CenterContainer"]
margin_left = 298.0
margin_top = 185.0
margin_right = 662.0
margin_bottom = 841.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="texmain" type="TextureRect" parent="main/CenterContainer"]
margin_left = 298.0
margin_top = 185.0
margin_right = 662.0
margin_bottom = 841.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="pivot" type="Control" parent="main/CenterContainer/texmain"]
anchor_left = 0.353
anchor_top = 0.856
anchor_right = 0.353
anchor_bottom = 0.856
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="main/CenterContainer/texmain/pivot"]
margin_left = -127.492
margin_top = -561.536
margin_right = 236.508
margin_bottom = 94.464
mouse_filter = 2
texture = ExtResource( 3 )

[node name="reelpoint" type="TextureRect" parent="main/CenterContainer/texmain/pivot/TextureRect"]
anchor_left = 0.538462
anchor_top = 0.856707
anchor_right = 0.538462
anchor_bottom = 0.857
margin_right = -1.52588e-05
margin_bottom = -0.192017
__meta__ = {
"_edit_use_anchors_": true
}

[node name="yank_button" type="TextureButton" parent="main/CenterContainer/texmain"]
visible = false
anchor_left = 0.469747
anchor_top = 0.532476
anchor_right = 0.804747
anchor_bottom = 0.763476
margin_left = 0.0119934
margin_top = -0.304016
margin_right = 0.071991
margin_bottom = 0.159973
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="yank_button_alt" type="TextureButton" parent="main/CenterContainer/texmain"]
visible = false
anchor_left = 0.499967
anchor_top = 0.739793
anchor_right = 0.845956
anchor_bottom = 0.993659
margin_left = 0.0119934
margin_top = -0.304016
margin_right = 0.071991
margin_bottom = 0.159973
action_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="scroll" type="TextureProgress" parent="main/CenterContainer/texmain"]
show_behind_parent = true
anchor_left = 0.78022
anchor_top = 0.0441098
anchor_right = 1.33222
anchor_bottom = 0.937415
margin_left = -14.0
margin_top = 0.0640037
margin_right = 0.071991
margin_bottom = -32.944
rect_rotation = 26.0
mouse_filter = 2
texture_progress = ExtResource( 9 )
fill_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="scroll_bad" type="TextureProgress" parent="main/CenterContainer/texmain"]
show_behind_parent = true
anchor_left = 0.78022
anchor_top = 0.0441098
anchor_right = 1.33222
anchor_bottom = 0.937415
margin_left = -14.0
margin_top = 0.0640037
margin_right = 0.071991
margin_bottom = -32.944
rect_rotation = 26.0
mouse_filter = 2
texture_progress = ExtResource( 11 )
fill_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="yankzones" type="Control" parent="main/CenterContainer/texmain"]
anchor_left = 0.700549
anchor_top = 0.0381098
anchor_right = 0.980549
anchor_bottom = 0.809463
margin_right = 0.0800171
margin_bottom = 43.992
rect_rotation = 23.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="reel_button" type="Button" parent="main/CenterContainer/texmain"]
anchor_left = 0.126857
anchor_top = 0.745671
anchor_right = 0.579187
anchor_bottom = 0.989085
margin_left = -0.17601
margin_top = -0.160004
margin_right = 0.175995
margin_bottom = 0.159973
mouse_filter = 2
custom_styles/focus = SubResource( 1 )
disabled = true
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="starpoint" type="Control" parent="main/CenterContainer/texmain"]
anchor_left = 0.291209
anchor_top = 0.744098
anchor_right = 0.291209
anchor_bottom = 0.744098
margin_top = -0.128021
margin_bottom = -0.128021
__meta__ = {
"_edit_use_anchors_": true
}

[node name="reel" type="TextureRect" parent="main"]
anchor_left = 0.2375
anchor_top = 0.682407
anchor_right = 0.277042
anchor_bottom = 0.752
margin_right = -0.920044
margin_bottom = -0.160034
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="yank_warning" type="TextureRect" parent="main"]
anchor_left = 0.315625
anchor_top = 0.589815
anchor_right = 0.452771
anchor_bottom = 0.746889
margin_right = 0.679932
margin_bottom = 0.359985
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ol" type="TextureRect" parent="main"]
visible = false
anchor_left = 0.299479
anchor_top = 0.442593
anchor_right = 0.436625
anchor_bottom = 0.599667
margin_right = 0.679932
margin_bottom = 0.359985
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="reel_warning" type="TextureRect" parent="main"]
anchor_left = 0.286979
anchor_top = 0.520371
anchor_right = 0.424125
anchor_bottom = 0.677445
margin_right = 0.679932
margin_bottom = 0.359985
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="countdown" type="CenterContainer" parent="main"]
anchor_right = 0.5
anchor_bottom = 0.95
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="main/countdown"]
visible = false
margin_left = 348.0
margin_top = 428.0
margin_right = 612.0
margin_bottom = 598.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="challenge_points" type="Control" parent="main"]
margin_right = 40.0
margin_bottom = 40.0

[node name="1" type="Control" parent="main/challenge_points"]
margin_left = 350.0
margin_top = 350.0
margin_right = 350.0
margin_bottom = 350.0

[node name="2" type="Control" parent="main/challenge_points"]
margin_left = 700.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 200.0

[node name="3" type="Control" parent="main/challenge_points"]
margin_left = 650.0
margin_top = 350.0
margin_right = 650.0
margin_bottom = 350.0

[node name="4" type="Control" parent="main/challenge_points"]
margin_left = 640.0
margin_top = 500.0
margin_right = 640.0
margin_bottom = 500.0

[node name="5" type="Control" parent="main/challenge_points"]
margin_left = 550.0
margin_top = 600.0
margin_right = 550.0
margin_bottom = 600.0

[node name="6" type="Control" parent="main/challenge_points"]
margin_left = 300.0
margin_top = 600.0
margin_right = 300.0
margin_bottom = 600.0

[node name="7" type="Control" parent="main/challenge_points"]
margin_left = 350.0
margin_top = 500.0
margin_right = 350.0
margin_bottom = 500.0

[node name="8" type="Control" parent="main/challenge_points"]
margin_left = 350.0
margin_top = 425.0
margin_right = 350.0
margin_bottom = 425.0

[node name="9" type="Control" parent="main/challenge_points"]
margin_left = 642.0
margin_top = 432.0
margin_right = 642.0
margin_bottom = 432.0

[node name="shatter_particle" parent="." instance=ExtResource( 10 )]
position = Vector2( -1040, 220 )

[node name="stars" type="Particles2D" parent="."]
position = Vector2( -1059, -117 )
emitting = false
amount = 10
lifetime = 3.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 16 )

[node name="flop_body" type="RigidBody2D" parent="."]
mode = 1
mass = 0.396939
gravity_scale = 27.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="flop_body"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/start = SubResource( 4 )

[node name="sfx" type="Node" parent="."]

[node name="break" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 20 )
volume_db = -4.0
bus = "SFX"

[node name="click" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 21 )
volume_db = 4.0
bus = "SFX"

[node name="reeling" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 22 )
volume_db = -8.0
bus = "SFX"

[node name="fail" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 23 )
volume_db = -14.0
bus = "SFX"

[node name="fail2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 25 )
volume_db = -8.0
bus = "SFX"

[node name="win" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 24 )
volume_db = -12.0
bus = "SFX"

[node name="autoclick_timer" type="Timer" parent="."]
wait_time = 0.11
autostart = true

[connection signal="pressed" from="main/CenterContainer/texmain/yank_button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="main/CenterContainer/texmain/yank_button_alt" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="autoclick_timer" to="." method="_on_autoclick_timer_timeout"]
